--- a/site/about.html
+++ b/site/about.html
@@ -83,7 +83,7 @@
     <!-- Форма Let's talk -->
     <div class="open-form">
         <h2>Hello, Let's work together.</h2>
-        <span class="close" href="#"></span>
+        <span class="close"></span>
 
         <form id="letstalk" action="#" method="POST">
             <input id="name" name="name" type="text" maxlength="256" placeholder="First name">
