--- a/site/project.html
+++ b/site/project.html
@@ -82,7 +82,7 @@
 
     <div class="open-form">
         <h2>Hello, Let's work together.</h2>
-        <span class="close" href="#"></span>
+        <span class="close"></span>
 
         <form id="letstalk" action="#" method="POST">
             <input id="name" name="name" type="text" maxlength="256" placeholder="First name">
