--- a/site/about.html
+++ b/site/about.html
@@ -14,7 +14,7 @@
     <title>Portfolio - Clone</title>
 </head>
 
-<body>
+<body class="gradient-bg">
 
     <div class="container">
         <nav class="nav">
@@ -24,14 +24,14 @@
             <div class="nav-menu">
                 <a class="nav-menu__item" href="project.html">+Projects</a>
                 <a class="nav-menu__item" href="about.html">About</a>
-                <a class="nav-menu__item talk-btn" href="#">Contant</a>
+                <a class="nav-menu__item talk-btn" href="#">Contact</a>
             </div>
         </nav>
     </div>
 
     <section class="about">
         <div class="about-img">
-            <img src="./assets/img/about-img.png" alt="">
+            <img src="./assets/img/about-img.jpg" alt="">
         </div>
         <div class="about-content">
             <div class="content-lists">
@@ -69,7 +69,7 @@
                 </p>
 
                 <div class="content-btns">
-                    <a class="talk-btn" href="#">Let's talk</a>
+                    <a class="talk-btn">Let's talk</a>
                     <a href="project.html">View +Projects</a>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                 placeholder="Project description"></textarea>
 
             <!-- Доработать -->
-            <button class="form-btn">send request</button>
+            <button type="submit" class="form-btn">send request</button>
             <button class="form-btn">Download resume</button>
         </form>
     </div>
