--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@
     <title>Portfolio - Clone</title>
 </head>
 
-<body>
+<body class="gradient-bg">
 
     <div class="container">
         <nav class="nav">
@@ -24,7 +24,7 @@
             <div class="nav-menu">
                 <a class="nav-menu__item" href="project.html">+Projects</a>
                 <a class="nav-menu__item" href="about.html">About</a>
-                <a class="nav-menu__item talk-btn" href="#">Contant</a>
+                <a class="nav-menu__item talk-btn" href="#">Contact</a>
             </div>
         </nav>
     </div>
@@ -53,7 +53,7 @@
                 placeholder="Project description"></textarea>
 
             <!-- Доработать -->
-            <button class="form-btn">send request</button>
+            <button type="submit" class="form-btn">send request</button>
             <button class="form-btn">Download resume</button>
         </form>
     </div>
