--- a/site/project.html
+++ b/site/project.html
@@ -24,12 +24,12 @@
             <div class="nav-menu">
                 <a class="nav-menu__item" href="project.html">+Projects</a>
                 <a class="nav-menu__item" href="about.html">About</a>
-                <a class="nav-menu__item talk-btn" href="#">Contant</a>
+                <a class="nav-menu__item talk-btn" href="#">Contact</a>
             </div>
         </nav>
     </div>
 
-    <div class="projects">
+    <div class="projects gradient-bg">
         <div class="projects-item">
             <a href="#" class="projects-item__content">
                 <div class="projects-item__title">
@@ -92,7 +92,7 @@
                 placeholder="Project description"></textarea>
 
             <!-- Доработать -->
-            <button class="form-btn">send request</button>
+            <button type="submit" class="form-btn">send request</button>
             <button class="form-btn">Download resume</button>
         </form>
     </div>
