--- a/site/project.html
+++ b/site/project.html
@@ -11,23 +11,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/project.css">
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <title>Portfolio - Clone</title>
 </head>
 
 <body>
 
-    <div class="container">
-        <nav class="nav">
-            <a href="index.html" class="brand">
-                <div class="brand-text">Dmitry Webzar</div>
-            </a>
-            <div class="nav-menu">
-                <a class="nav-menu__item" href="project.html">+Projects</a>
-                <a class="nav-menu__item" href="about.html">About</a>
-                <a class="nav-menu__item talk-btn" href="#">Contact</a>
-            </div>
-        </nav>
-    </div>
+    <nav class="nav">
+        <a href="index.html" class="brand">
+            <div class="brand-text">Dmitry Webzar</div>
+        </a>
+        <div class="nav-menu">
+            <a class="nav-menu__item" href="project.html">+Projects</a>
+            <a class="nav-menu__item" href="about.html">About</a>
+            <a class="nav-menu__item talk-btn" href="#">Contact</a>
+        </div>
+    </nav>
 
     <div class="projects gradient-bg">
         <div class="projects-item">
