--- a/site/about.html
+++ b/site/about.html
@@ -11,23 +11,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/about.css">
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <title>Portfolio - Clone</title>
 </head>
 
 <body class="gradient-bg">
 
-    <div class="container">
-        <nav class="nav">
-            <a href="index.html" class="brand">
-                <div class="brand-text">Dmitry Webzar</div>
-            </a>
-            <div class="nav-menu">
-                <a class="nav-menu__item" href="project.html">+Projects</a>
-                <a class="nav-menu__item" href="about.html">About</a>
-                <a class="nav-menu__item talk-btn" href="#">Contact</a>
-            </div>
-        </nav>
-    </div>
+    <nav class="nav">
+        <a href="index.html" class="brand">
+            <div class="brand-text">Dmitry Webzar</div>
+        </a>
+        <div class="nav-menu">
+            <a class="nav-menu__item" href="project.html">+Projects</a>
+            <a class="nav-menu__item" href="about.html">About</a>
+            <a class="nav-menu__item talk-btn" href="#">Contact</a>
+        </div>
+    </nav>
+
 
     <section class="about">
         <div class="about-img">
@@ -75,10 +75,10 @@
             </div>
         </div>
 
-        <a class="main-rightLink" href="#">
-            <div class="main-rightLink__text"></div>Mobile Award
-        </a>
     </section>
+    <a class="main-rightLink" href="#">
+        <div class="main-rightLink__text"></div>Mobile Award
+    </a>
 
     <!-- Форма Let's talk -->
     <div class="open-form">
