--- a/site/index.html
+++ b/site/index.html
@@ -11,23 +11,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <title>Portfolio - Clone</title>
 </head>
 
 <body class="gradient-bg">
 
-    <div class="container">
-        <nav class="nav">
-            <a href="index.html" class="brand">
-                <div class="brand-text">Dmitry Webzar</div>
-            </a>
-            <div class="nav-menu">
-                <a class="nav-menu__item" href="project.html">+Projects</a>
-                <a class="nav-menu__item" href="about.html">About</a>
-                <a class="nav-menu__item talk-btn" href="#">Contact</a>
-            </div>
-        </nav>
-    </div>
+    <nav>
+        <a href="index.html" class="brand">
+            <div class="brand-text">Dmitry Webzar</div>
+        </a>
+        <div class="nav-menu">
+            <a class="nav-menu__item" href="project.html">+Projects</a>
+            <a class="nav-menu__item" href="about.html">About</a>
+            <a class="nav-menu__item talk-btn" href="#">Contact</a>
+        </div>
+    </nav>
 
     <main class="main">
         <div class="main-block">
@@ -35,11 +34,11 @@
             <h2 class="main-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
         </div>
         <a href="project.html" class="main-link">Explore Projects</a>
-        <a class="main-rightLink" href="#">
-            <div class="main-rightLink__text"></div>Mobile Award
-        </a>
     </main>
 
+    <a class="main-rightLink" href="#">
+        <div class="main-rightLink__text"></div>Mobile Award
+    </a>
 
     <div class="open-form">
         <h2>Hello, Let's work together.</h2>
