v.1_1: added preview cards on project.html and scroll-btn

--- a/project.html
+++ b/project.html
@@ -2,136 +2,202 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/fonts.css">
-    <link rel="stylesheet" href="./assets/css/animate.min.css">
-    <link rel="stylesheet" href="./assets/css/slick.css">
-    <link rel="stylesheet" href="./assets/css/project.css">
-    <link rel="shortcut icon" href="./assets/img/icon.png" type="image/png">
-    <title>Portfolio - Clone</title>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="./assets/css/reset.css">
+   <link rel="stylesheet" href="./assets/css/fonts.css">
+   <link rel="stylesheet" href="./assets/css/animate.min.css">
+   <link rel="stylesheet" href="./assets/css/slick.css">
+   <link rel="stylesheet" href="./assets/css/project.css">
+   <link rel="shortcut icon" href="./assets/img/icon.png" type="image/png">
+   <title>Portfolio - Clone</title>
 </head>
 
 <body>
 
-    <nav class="nav">
-        <a href="index.html" class="brand">
-            <img class="nav-logo" src="./assets/img/logo.png" alt="">
-        </a>
-        <div class="nav-menu">
-            <a class="nav-menu__item" href="project.html">+Projects</a>
-            <a class="nav-menu__item" href="about.html">About</a>
-            <a class="nav-menu__item talk-btn" href="#">Contact</a>
-        </div>
-    </nav>
+   <nav class="nav">
+      <a href="index.html" class="brand">
+         <img class="nav-logo" src="./assets/img/logo.png" alt="">
+      </a>
+      <div class="nav-menu">
+         <a class="nav-menu__item" href="project.html">+Projects</a>
+         <a class="nav-menu__item" href="about.html">About</a>
+         <a class="nav-menu__item talk-btn" href="#">Contact</a>
+      </div>
+   </nav>
 
-    <div class="projects">
-        <div class="slider">
-            <div class="slider-item"
-                style="background-image: url('https://webzar.000webhostapp.com/projects/lemon/assets/img/view-img-1.jpg');">
-                <a href="./projects/lemon/index.html" target="_blank" class="slider-item__content">
-                    <h2 class="slider-item__title">
-                        Lemon
-                    </h2>
-                    <span class="slider-item__subtitle">
-                        This is second site.
-                    </span>
-                </a>
-            </div>
-
-            <div class="slider-item"
-                style="background-image: url('https://webzar.000webhostapp.com/projects/tesla/img/bg-slide-3.jpg');">
-                <a href="./projects/tesla/index.html" target="_blank" class="projects-item__content">
-                    <h2 class="slider-item__title">
-                        Tesla
-                    </h2>
-                    <span class="slider-item__subtitle">
-                        First expirience whith animation (animate.css)
-                    </span>
-                </a>
-            </div>
-
-            <div class="slider-item"
-                style="background-image: url('https://www.marcomarino.design/images/eventoxtra-header.jpg');">
-                <a href="./projects/tesla/index.html" target="_blank" class="projects-item__content">
-                    <h2 class="slider-item__title">
-                        TEST 1
-                    </h2>
-                    <span class="slider-item__subtitle">
-                        First expirience whith animation (animate.css)
-                    </span>
-                </a>
-            </div>
-
-            <div class="slider-item" style="background-image: url('https://www.marcomarino.design/images/flako.jpg');">
-                <a href="./projects/tesla/index.html" target="_blank" class="projects-item__content">
-                    <h2 class="slider-item__title">
-                        TEST 2
-                    </h2>
-                    <span class="slider-item__subtitle">
-                        First expirience whith animation (animate.css)
-                    </span>
-                </a>
-            </div>
-        </div>
-        <!-- //Slider -->
-
-        <a href="" class="showMore-btn">SHOW MORE</a>
-
-        <div class="projects-preview">
-            <a href="" class="preview-item">
-                <div class="wrapper">
-                    <div class="preview-item__front">
-                        <!-- <img src="https://webzar.000webhostapp.com/projects/lemon/assets/img/view-img-1.jpg"
-                            style="width: 100%; height: 100%" alt=""> -->
-                    </div>
-                    <div class="preview-item__back">
-                        <h2>Lemon</h2>
-                        <p>First site</p>
-                    </div>
-                </div>
+   <div class="projects">
+      <div class="slider">
+         <div class="slider-item"
+            style="background-image: url('https://webzar.000webhostapp.com/projects/lemon/assets/img/view-img-1.jpg');">
+            <a href="./projects/lemon/index.html" target="_blank" class="slider-item__content">
+               <h2 class="slider-item__title">
+                  Lemon
+               </h2>
+               <span class="slider-item__subtitle">
+                  This is second site.
+               </span>
             </a>
-        </div>
-    </div>
+         </div>
 
+         <div class="slider-item"
+            style="background-image: url('https://webzar.000webhostapp.com/projects/tesla/img/bg-slide-3.jpg');">
+            <a href="./projects/tesla/index.html" target="_blank" class="projects-item__content">
+               <h2 class="slider-item__title">
+                  Tesla
+               </h2>
+               <span class="slider-item__subtitle">
+                  First expirience whith animation (animate.css)
+               </span>
+            </a>
+         </div>
 
-    <div class="open-form">
-        <h2>Hello, Let's work together.</h2>
-        <span class="close"></span>
+         <div class="slider-item"
+            style="background-image: url('https://www.marcomarino.design/images/eventoxtra-header.jpg');">
+            <a href="./projects/tesla/index.html" target="_blank" class="projects-item__content">
+               <h2 class="slider-item__title">
+                  TEST 1
+               </h2>
+               <span class="slider-item__subtitle">
+                  First expirience whith animation (animate.css)
+               </span>
+            </a>
+         </div>
 
-        <form id="letstalk" action="#" method="POST">
-            <input id="name" name="name" type="text" maxlength="256" placeholder="First name">
-            <input id="subname" name="second-name" type="text" maxlength="256" placeholder="Second name">
-            <input id="email" type="email" name="email" maxlength="256" placeholder="Email adress">
-            <textarea id="description" name="text" cols="30" rows="10" maxlength="5000"
-                placeholder="Project description"></textarea>
+         <div class="slider-item" style="background-image: url('https://www.marcomarino.design/images/flako.jpg');">
+            <a href="./projects/tesla/index.html" target="_blank" class="projects-item__content">
+               <h2 class="slider-item__title">
+                  TEST 2
+               </h2>
+               <span class="slider-item__subtitle">
+                  First expirience whith animation (animate.css)
+               </span>
+            </a>
+         </div>
+      </div>
+      <!-- //Slider -->
 
-            <!-- Доработать -->
-            <button type="submit" class="form-btn">send request</button>
-            <button class="form-btn">Download resume</button>
-        </form>
-    </div>
+      <a class="showMore-btn">SHOW MORE</a>
 
-    <footer class="footer">
-        <div class="container">
-            <div class="social">
-                <a class="social-link" href="https://mail.google.com/" target="_blank">GMail</a>
-                <a class="social-link" href="https://web.telegram.org/z/" target="_blank">Telegram</a>
-                <a class="social-link" href="https://vk.com/" target="_blank">VK</a>
-                <a class="social-link" href="https://github.com/" target="_blank">GitHub</a>
+      <div class="projects-preview">
+         <a href="" class="preview-item">
+            <div class="wrapper">
+               <div class="preview-item__front"
+                  style="background-image: url(https://webzar.000webhostapp.com/projects/lemon/assets/img/view-img-1.jpg);">
+               </div>
+               <div class="preview-item__back">
+                  <h2>Lemon</h2>
+                  <span>First site</span>
+               </div>
             </div>
-            <div class="footer-text">
-                Best experience on modern browsers
-            </div>
-        </div>
-    </footer>
+         </a>
 
-    <script src="./assets/js/jquery-3.6.0.min.js"></script>
-    <script src="./assets/js/slick.min.js"></script>
-    <script src="./assets/js/project.js"></script>
-    <script src="./assets/js/main.js"></script>
+         <a href="" class="preview-item">
+            <div class="wrapper">
+               <div class="preview-item__front"
+                  style="background-image: url(https://webzar.000webhostapp.com/projects/tesla/img/bg-slide-3.jpg);">
+                  <!-- <img src="https://webzar.000webhostapp.com/projects/tesla/img/bg-slide-3.jpg" alt=""> -->
+               </div>
+               <div class="preview-item__back">
+                  <h2>Tesla</h2>
+                  <p>First expirience whith animation (animate.css)</p>
+               </div>
+            </div>
+         </a>
+
+         <a href="" class="preview-item">
+            <div class="wrapper">
+               <div class="preview-item__front">
+               </div>
+               <div class="preview-item__back">
+                  <h2>Test 1</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam quidem, magnam itaque
+                     repellendus accusantium est, autem temporibus facilis ex asperiores, sunt at culpa veritatis?
+                     Delectus eveniet maiores tempore dolore amet?</p>
+               </div>
+            </div>
+         </a>
+
+         <a href="" class="preview-item">
+            <div class="wrapper">
+               <div class="preview-item__front">
+               </div>
+               <div class="preview-item__back">
+                  <h2>Test 2</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam quidem, magnam itaque
+                     repellendus accusantium est, autem temporibus facilis ex asperiores, sunt at culpa veritatis?
+                     Delectus eveniet maiores tempore dolore amet?</p>
+               </div>
+            </div>
+         </a>
+
+         <a href="" class="preview-item">
+            <div class="wrapper">
+               <div class="preview-item__front">
+               </div>
+               <div class="preview-item__back">
+                  <h2>Test 3</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam quidem, magnam itaque
+                     repellendus accusantium est, autem temporibus facilis ex asperiores, sunt at culpa veritatis?
+                     Delectus eveniet maiores tempore dolore amet?</p>
+               </div>
+            </div>
+         </a>
+
+         <a href="" class="preview-item">
+            <div class="wrapper">
+               <div class="preview-item__front">
+               </div>
+               <div class="preview-item__back">
+                  <h2>Test 4</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam quidem, magnam itaque
+                     repellendus accusantium est, autem temporibus facilis ex asperiores, sunt at culpa veritatis?
+                     Delectus eveniet maiores tempore dolore amet?</p>
+               </div>
+            </div>
+         </a>
+      </div>
+   </div>
+
+
+   <div class="open-form">
+      <h2>Hello, Let's work together.</h2>
+      <span class="close"></span>
+
+      <form id="letstalk" action="#" method="POST">
+         <input id="name" name="name" type="text" maxlength="256" placeholder="First name">
+         <input id="subname" name="second-name" type="text" maxlength="256" placeholder="Second name">
+         <input id="email" type="email" name="email" maxlength="256" placeholder="Email adress">
+         <textarea id="description" name="text" cols="30" rows="10" maxlength="5000"
+            placeholder="Project description"></textarea>
+
+         <!-- Доработать -->
+         <button type="submit" class="form-btn">send request</button>
+         <button class="form-btn">Download resume</button>
+      </form>
+   </div>
+
+   <a class="scroll-to-top"></a>
+
+   <footer class="footer">
+      <div class="container">
+         <div class="social">
+            <a class="social-link" href="https://mail.google.com/" target="_blank">GMail</a>
+            <a class="social-link" href="https://web.telegram.org/z/" target="_blank">Telegram</a>
+            <a class="social-link" href="https://vk.com/" target="_blank">VK</a>
+            <a class="social-link" href="https://github.com/" target="_blank">GitHub</a>
+         </div>
+         <div class="footer-text">
+            Best experience on modern browsers
+         </div>
+      </div>
+   </footer>
+
+   <script src="./assets/js/jquery-3.6.0.min.js"></script>
+   <script src="./assets/js/slick.min.js"></script>
+   <script src="./assets/js/project.js"></script>
+   <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
