--- a/project.html
+++ b/project.html
@@ -81,7 +81,7 @@
       <a class="showMore-btn">SHOW MORE</a>
 
       <div class="projects-preview">
-         <a href="" class="preview-item">
+         <a href="./projects/lemon/index.html" target="_blank" class="preview-item">
             <div class="wrapper">
                <div class="preview-item__front"
                   style="background-image: url(https://webzar.000webhostapp.com/projects/lemon/assets/img/view-img-1.jpg);">
@@ -93,11 +93,10 @@
             </div>
          </a>
 
-         <a href="" class="preview-item">
+         <a href="./projects/tesla/index.html" target="_blank" class="preview-item">
             <div class="wrapper">
                <div class="preview-item__front"
                   style="background-image: url(https://webzar.000webhostapp.com/projects/tesla/img/bg-slide-3.jpg);">
-                  <!-- <img src="https://webzar.000webhostapp.com/projects/tesla/img/bg-slide-3.jpg" alt=""> -->
                </div>
                <div class="preview-item__back">
                   <h2>Tesla</h2>
@@ -106,7 +105,7 @@
             </div>
          </a>
 
-         <a href="" class="preview-item">
+         <a href="./projects/tesla/index.html" target="_blank" class="preview-item">
             <div class="wrapper">
                <div class="preview-item__front">
                </div>
@@ -119,7 +118,7 @@
             </div>
          </a>
 
-         <a href="" class="preview-item">
+         <a href="./projects/tesla/index.html" target="_blank" class="preview-item">
             <div class="wrapper">
                <div class="preview-item__front">
                </div>
@@ -132,7 +131,7 @@
             </div>
          </a>
 
-         <a href="" class="preview-item">
+         <a href="./projects/tesla/index.html" target="_blank" class="preview-item">
             <div class="wrapper">
                <div class="preview-item__front">
                </div>
@@ -145,7 +144,7 @@
             </div>
          </a>
 
-         <a href="" class="preview-item">
+         <a href="./projects/tesla/index.html" target="_blank" class="preview-item">
             <div class="wrapper">
                <div class="preview-item__front">
                </div>
